# refgenconf

./: .gitignore  .pre-commit-config.yaml  .travis.yml  MANIFEST.in  README.md  __init__.py  changelog.md  codecov.yml  pyproject.toml  refgenconf.py  refgenie.yaml  setup.py
.github/workflows/: black.yml  python-publish.yml  run-codecov.yml  run-pytest.yml
docs/: changelog.md
refgenconf/: __init__.py  _version.py  asset.py  asset_class.py  const.py  exceptions.py  helpers.py  henge.py  plugins.py  populator.py  progress_bar.py  recipe.py  refgenconf.py  refgenconf_v03.py  seqcol.py
refgenconf/schemas/: AnnotatedSequenceDigestList.yaml  asset_class_schema.yaml  genome_config_schema.yaml  recipe_schema.yaml
requirements/: requirements-all.txt  requirements-dev.txt  requirements-test.txt
tests/: atest_genome_config_format_error.py  conftest.py  test_1pull_asset.py  test_add.py  test_alias.py  test_asset_tag.py  test_assets_basic.py  test_compare.py  test_config_constructor.py  test_config_unbound_env_vars.py  test_genome_config_format_error.py  test_genomes.py  test_get_asset.py  test_getseq.py  test_init.py  test_list_remote.py  test_listing.py  test_packaging.py  test_plugins.py  test_populate.py  test_properties.py  test_pull_asset.py  test_refgenconf.py  test_remote_mode.py  test_removal.py  test_select_genome_config.py  test_seqcol.py  test_table.py  test_update_genomes.py  test_update_servers.py  test_upgrade.py  test_utils.py
tests/data/: fasta_asset_class.yaml  fasta_child_asset_class.yaml  fasta_child_child_asset_class.yaml  genomes.yaml  genomes_v2.yaml  genomes_v3.yaml
